--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -21,6 +21,9 @@ jobs:
         image: ghcr.io/hongfs/env:get-docker-tags
         ports:
           - 9000:9000
+    strategy:
+      matrix:
+        region: [cn-hongkong, cn-shenzhen]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
@@ -28,8 +31,13 @@ jobs:
         registry: registry.cn-hongkong.aliyuncs.com
         username: q2889895155
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-shenzhen.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       run: |
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./sync.sh
-        TO=registry.cn-hongkong.aliyuncs.com/hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
+        TO=registry.${{ matrix.name }}.aliyuncs.com/hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
