--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,5 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Run
+      env:
+        CONFIG_KEY: ${{ secrets.SPOT_KEY }}
       run: |
-        podman run -it -e CONFIG_KEY=${{ secrets.SPOT_KEY }} registry.cn-hongkong.aliyuncs.com/hongfs/aliyun-ecs-spot-price:main
+        podman run -it -e CONFIG_KEY="${{ env.CONFIG_KEY }}" registry.cn-hongkong.aliyuncs.com/hongfs/aliyun-ecs-spot-price:main
