--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -12,6 +12,9 @@ concurrency:
 jobs:
   ghcr_env:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        region: [1,2,3,4,5]
     steps:
     - name: Run
       env:
