--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -7,7 +7,7 @@ on:
   # schedule:
   #   - cron: "0 * * * *" # 每小时同步一次
 
-# 已注释程序的同步
+# 已注释程序的同步-1
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
