--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -41,3 +41,30 @@ jobs:
         cd "${GITHUB_WORKSPACE}"
         chmod +x ./sync.sh
         TO=registry.${{ matrix.region }}.aliyuncs.com/hongfs/env FROM=ghcr.io/hongfs/env ./sync.sh
+  ghcr_env_2:
+    runs-on: ubuntu-latest
+    services:
+      tags:
+        image: ghcr.io/hongfs/env:get-docker-tags
+        ports:
+          - 9000:9000
+    strategy:
+      matrix:
+        region: [cn-hongkong, cn-shenzhen]
+    steps:
+    - uses: actions/checkout@v3
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-hongkong.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - uses: docker/login-action@v2
+      with:
+        registry: registry.cn-shenzhen.aliyuncs.com
+        username: q2889895155
+        password: ${{ secrets.ALIYUN_CR_PASSWORD }}
+    - name: Run
+      run: |
+        cd "${GITHUB_WORKSPACE}"
+        chmod +x ./sync.sh
+        TO=registry.${{ matrix.region }}.aliyuncs.com/hongfs/ecs-command-actions FROM=ghcr.io/hongfs/ecs-command-actions ./sync.sh
