--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -20,6 +20,6 @@ jobs:
       env:
         CONFIG_KEY: ${{ secrets.SPOT_KEY }}
       run: |
-        podman run -it -e CONFIG_KEY="${{ env.CONFIG_KEY }}" registry.cn-hongkong.aliyuncs.com/hongfs/aliyun-ecs-spot-price:main
+        podman run -it -e HAS_GITHUB=1 -e CONFIG_KEY="${{ env.CONFIG_KEY }}" registry.cn-hongkong.aliyuncs.com/hongfs/aliyun-ecs-spot-price:main
 
         echo "1"
