--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -29,8 +29,8 @@ jobs:
         password: ${{ secrets.ALIYUN_CR_PASSWORD }}
     - name: Run
       env:
-        FROM_IMAGE: ghcr.io/hongfs/prometheus-cloud-target:main-ot20240116170951243656no
-        TO_IMAGE: hongfs/prometheus-cloud-target:main-ot20240116170951243656no
+        FROM_IMAGE: ghcr.io/hongfs/env:runner
+        TO_IMAGE: hongfs/env:runner
       run: |
         docker pull $FROM_IMAGE
         docker tag $FROM_IMAGE registry.${{ matrix.region }}.aliyuncs.com/$TO_IMAGE
