--- a/template.yaml
+++ b/template.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        region: [cn-hongkong, cn-shenzhen]
+        region: [cn-hongkong]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
