--- a/template.yaml
+++ b/template.yaml
@@ -30,7 +30,7 @@ jobs:
     - uses: docker/login-action@v2
       with:
         registry: swr.ap-southeast-1.myhuaweicloud.com
-        username: hongfs99
+        username: ap-southeast-1@RY0U3RFXDOXU9JXGXWM1
         password: ${{ secrets.HUAWEI_SWR_PASSWORD }}
     - name: Run
       env:
