--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        region: [cn-hongkong]
+        endpoint: [registry.cn-hongkong.aliyuncs.com, swr.ap-southeast-1.myhuaweicloud.com]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
@@ -38,5 +38,5 @@ jobs:
         TO_IMAGE: hongfs/env:web-1
       run: |
         docker pull $FROM_IMAGE
-        docker tag $FROM_IMAGE registry.${{ matrix.region }}.aliyuncs.com/$TO_IMAGE
-        docker push registry.${{ matrix.region }}.aliyuncs.com/$TO_IMAGE
+        docker tag $FROM_IMAGE ${{ matrix.endpoint }}/$TO_IMAGE
+        docker push ${{ matrix.endpoint }}/$TO_IMAGE
