--- a/template.yaml
+++ b/template.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        endpoint: [registry.cn-hongkong.aliyuncs.com, swr.ap-southeast-1.myhuaweicloud.com]
+        endpoint: [registry.cn-hongkong.aliyuncs.com]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
