--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        endpoint: [registry.cn-hongkong.aliyuncs.com, swr.ap-southeast-1.myhuaweicloud.com]
+        endpoint: [registry.cn-hongkong.aliyuncs.com]
     steps:
     - uses: actions/checkout@v3
     - uses: docker/login-action@v2
@@ -34,8 +34,8 @@ jobs:
         password: ${{ secrets.HUAWEI_SWR_PASSWORD }}
     - name: Run
       env:
-        FROM_IMAGE: ghcr.io/hongfs/env:web-1
-        TO_IMAGE: hongfs/env:web-1
+        FROM_IMAGE: ghcr.io/hongfs/env:etcd
+        TO_IMAGE: hongfs/env:etcd
       run: |
         docker pull $FROM_IMAGE
         docker tag $FROM_IMAGE ${{ matrix.endpoint }}/$TO_IMAGE
