sync: ghcr.io/hongfs/env:gogs

--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -34,8 +34,8 @@ jobs:
         password: ${{ secrets.HUAWEI_SWR_PASSWORD }}
     - name: Run
       env:
-        FROM_IMAGE: ghcr.io/hongfs/env:aliyun-cdn-edgescript
-        TO_IMAGE: hongfs/env:aliyun-cdn-edgescript
+        FROM_IMAGE: ghcr.io/hongfs/env:gogs
+        TO_IMAGE: hongfs/env:gogs
       run: |
         docker pull $FROM_IMAGE
         docker tag $FROM_IMAGE ${{ matrix.endpoint }}/$TO_IMAGE
