sync: ghcr.io/hongfs/env:php82-fpm

--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -34,8 +34,8 @@ jobs:
         password: ${{ secrets.HUAWEI_SWR_PASSWORD }}
     - name: Run
       env:
-        FROM_IMAGE: ghcr.io/hongfs/env:get-docker-tags
-        TO_IMAGE: hongfs/env:get-docker-tags
+        FROM_IMAGE: ghcr.io/hongfs/env:php82-fpm
+        TO_IMAGE: hongfs/env:php82-fpm
       run: |
         docker pull $FROM_IMAGE
         docker tag $FROM_IMAGE ${{ matrix.endpoint }}/$TO_IMAGE
